# StudyNotes

./: 1. 初认.md  2.1. 数据操作.ipynb  2.1. 数据操作.md  2.2 数据预处理.md  2.3.1矩阵计算.md  2.3.2自动求导.ipynb  2.3.2自动求导.md  2.3.3 线性回归.ipynb  2.3.3 线性回归.md  2.3线性代数.ipynb  2.3线性代数.md  2.4  微积分.ipynb  2.4  微积分.md  2.5 自动微分.ipynb  2.6 概率.ipynb  2.6 概率.md  3.1 线性回归.ipynb  3.1 线性回归.md  3.2线性回归的从零开始实现.ipynb  3.2线性回归的从零开始实现.md  3.3 多层感知机模型.ipynb  3.3 多层感知机模型.md  3.5 模型选择.ipynb  3.5 模型选择.md  4. 逻辑回归.md  5. 多变量线性回归.md  6. 神经网络.md  人脸识别.md  名称解释.md  校园主页升级改版服务合同.docx
ai/: 1. 初认.md  12. 深度卷积神经网络.md  2. 数据操作.md  5. 多层感知机模型.md  8. 模型选择.md  专业词解释.md
c++/: Vcpkg CC++库管理工具安装和使用教程.md
c++/ai_aibum/: CMakeLists.txt  ai相册技术文档.md  模型剪枝优化.md
c++/ai_aibum/include/: arcface.h  retinaface.h  scr_arc_face.h  scrfd_kps.h
c++/ai_aibum/src/: arcface.cpp  retinaface.cpp  scr_arc_face.cpp  scrfd_kps.cpp
c++/ai_aibum/tests/: test.cpp
cython/: cython.md
model_train/: AI.md  训练记录.md
models_train/: Bert-VITS2_V210训练.md  从零到一实现目标检测识别.md  基于paddle身份证识别任务微调流程化.md  训练笔记.md
ubuntu/: ubuntu.md
个人模型记录/: 金融大模型.md
个人笔记/: Ai.canvas  softmax回归.md  任务清单.md  卷积神经.md  循环神经网络.md  深度学习.md
个人笔记/.obsidian/: graph.json  workspace.json
个人笔记/HLS_Project/: internlm数据构建.canvas  人脸检测模型训练.md  模型对应.canvas  针对婴幼儿人脸识别模型训练.md
个人笔记/个人/: 未命名.canvas  未命名.md
个人笔记/机器学习Ai相关/: Ai.canvas
入门课程/: 2.1. 数据操作.md  2.2 数据预处理.md  2.3.1矩阵计算.ipynb  2.3.1矩阵计算.md  2.3.3 线性回归.md  2.3线性代数.md  2.4  微积分.md  2.5 自动微分.md  2.6 概率.md  2.7 查阅文档.md  3.2线性回归的从零开始实现.md  3.3 多层感知机模型.md  3.4 多层感知机从零开始实现.md  3.5 模型选择.md  6. 神经网络.md
常见报错/ubuntu/: ubuntu.md
常见报错/包安装常见报错/: site-pakeage.md
机器学习/: 1. 初认.md  10. 深度学习计算.md  3. 线性代数与微积分.md  4. 线性回归与逻辑回归.md  6. 多层感知机模型.md  多项式回归.md  拓展_信息论.md
机器学习/入门课程ipynb/: 2.2 数据预处理.ipynb  (+2 more)
模型训练记录/: InternLM微调.md  chatGLM微调.md  业务助手数据构建.md  基于paddle身份证识别任务微调流程化.md
(+17 files in other folders)
